variables de entorno

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
-<%- include("template/cabecera", {tituloWeb:'Página de inicio'}) %>
-<body>
-    <h1 class="text-primary">Título de mi sitio index</h1>
-    <h2><%= titulo %></h2> <!--Forma de traer una variable desde el JS-->
-    
+<%- include("template/cabecera", {tituloWeb: 'Página de inicio'}) %>
+
+    <h1 class="text-primary">Titulo de mi sitio web Index</h1>
+    <h2><%= titulo %></h2>
+
 <%- include("template/footer") %>
